--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,7 +38,7 @@ jobs:
         run: chmod +x gradlew
       - name: Build with Gradle
         run: ./gradlew build
-      - name: Upload API LIB
+      - name: Upload API Lib
         uses: actions/upload-artifact@v2
         with:
           name: Banner API
