--- a/banner-server/build.gradle
+++ b/banner-server/build.gradle
@@ -24,15 +24,16 @@ dependencies {
 	compileOnly "org.jetbrains:annotations:21.0.1"
 
 	// bukkit
-	implementation(include("org.yaml:snakeyaml:2.0"))
-	implementation(include("com.mohistmc:i18n:0.6"))
-	implementation(include('com.mohistmc:json:0.5'))
-	implementation(include('com.mohistmc:tools:0.5.1'))
-	implementation(include('com.mohistmc:dynamicenum:0.3.1'))
+	implementation("org.yaml:snakeyaml:2.2")
+	implementation("com.mohistmc:i18n:0.6")
+	implementation('com.mohistmc:json:0.5')
+	implementation('com.mohistmc:tools:0.5.1')
+	implementation('com.mohistmc:dynamicenum:0.3.1')
+
 	// jansi support
-	implementation(include("org.jline:jline-terminal:3.21.0"))
-	implementation(include("org.jline:jline-terminal-jansi:3.21.0"))
-	implementation(include("net.minecrell:terminalconsoleappender:1.4.0"))
+	implementation("org.jline:jline-terminal:3.21.0")
+	implementation("org.jline:jline-terminal-jansi:3.21.0")
+	implementation("net.minecrell:terminalconsoleappender:1.4.0")
 
 	// craftbukkit
 	implementation "org.fusesource.jansi:jansi:1.18"
@@ -47,14 +48,14 @@ dependencies {
 	implementation "net.md-5:bungeecord-chat:1.16-R0.4"
 	implementation "io.izzel:tools:1.3.0"
 
-	implementation(include("org.apache.logging.log4j:log4j-iostreams:2.20.0"))
+	implementation("org.apache.logging.log4j:log4j-iostreams:2.20.0")
 
 	//class modify
-	implementation(include("io.izzel.arclight:mixin-tools:1.2.4")) { transitive = false }
+	implementation("io.izzel.arclight:mixin-tools:1.2.4") { transitive = false }
 	annotationProcessor("io.izzel.arclight:mixin-tools:1.2.4") { transitive = false }
 
 	// mohist lib
-	implementation(include("com.mohistmc:librariesvault:1.20.2"))
+	implementation("com.mohistmc:librariesvault:1.20.2")
 
 	include(rootProject.project("banner-api"))
 	include(rootProject.project("banner-translate"))
