--- a/settings.gradle
+++ b/settings.gradle
@@ -13,3 +13,4 @@ include("banner-server")
 include("banner-translate")
 include("banner-api")
 include("banner-transitive-access-wideners")
+include("banner-stackdeobf")
