--- a/settings.gradle
+++ b/settings.gradle
@@ -14,3 +14,4 @@ include("banner-translate")
 include("banner-api")
 include("banner-transitive-access-wideners")
 include("banner-stackdeobf")
+include("banner-plugin")
