--- a/settings.gradle
+++ b/settings.gradle
@@ -15,3 +15,4 @@ include("banner-api")
 include("banner-transitive-access-wideners")
 include("banner-stackdeobf")
 include("banner-plugin")
+include("banner-bootstrap")
