--- a/settings.gradle
+++ b/settings.gradle
@@ -16,3 +16,4 @@ include("banner-transitive-access-wideners")
 include("banner-stackdeobf")
 include("banner-plugin")
 include("banner-bootstrap")
+include("banner-bukkit-manager")
