Fabric WorldEdit Compat(WIP)

--- a/banner-server/build.gradle
+++ b/banner-server/build.gradle
@@ -16,6 +16,7 @@ dependencies {
 	include(rootProject.project("banner-transitive-access-wideners"))
 	include(rootProject.project("banner-stackdeobf"))
 	include(rootProject.project("banner-bukkit-manager"))
+	include(rootProject.project("banner-compat"))
 }
 
 moduleDependencies(project, [
