--- a/settings.gradle
+++ b/settings.gradle
@@ -17,3 +17,4 @@ include("banner-stackdeobf")
 include("banner-plugin")
 include("banner-bootstrap")
 include("banner-bukkit-manager")
+include("banner-compat")
