--- a/banner-server/build.gradle
+++ b/banner-server/build.gradle
@@ -14,6 +14,7 @@ dependencies {
 	include(rootProject.project("banner-api"))
 	include(rootProject.project("banner-transitive-access-wideners"))
 	include(rootProject.project("banner-stackdeobf"))
+	include(rootProject.project("banner-bukkit-manager"))
 }
 
 moduleDependencies(project, [
