--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,9 +7,9 @@ on : [push, pull_request]
 
 env:
   MINECRAFT_VERSION: 1.20.1
-  VERSION: 1.20.x-snapshot
+  VERSION: 1.20.1-snapshot
   MODRINTH_TOKEN: ${{ secrets.PUBLISH_MODRINTH_TOKEN }}
-  RELEASE_NAME: banner-1.20.x
+  RELEASE_NAME: banner-1.20.1
 
 jobs:
   build:
@@ -27,7 +27,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-gradle-
       - uses: actions/checkout@v4
-      - name: Set up JDK 17
+      - name: Set up JDK 21
         uses: actions/setup-java@v3
         with:
           java-version: '17'
@@ -37,17 +37,9 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
       - name: Build with Gradle
-        run: ./gradlew build
-
-      - name: Publish to ModRinth
-        uses: Kir-Antipov/mc-publish@v3.3.0
+        run: ./gradlew cleaBuild build
+      - name: Upload API Lib
+        uses: actions/upload-artifact@v4
         with:
-          modrinth-id: 7ntInrAy
-          modrinth-token: "${{env.MODRINTH_TOKEN}}"
-          name: "${{env.RELEASE_NAME}}"
-          version: "${{env.VERSION}}"
-          version-type: release
-
-          loaders: fabric
-          game-versions: '1.20.1'
-          java: "17"
+          name: Banner API
+          path: ./banner-api/build/devlibs/*.jar
