--- a/banner-plugin/src/main/resources/plugin.yml
+++ b/banner-plugin/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: BannerPlugin
 main: com.mohistmc.banner.plugin.BannerPlugin
 version: ${version}
-api-version: 1.21.1
+api-version: '1.21.2'
 description: A Plugin for Banner Server
