--- a/gradle.properties
+++ b/gradle.properties
@@ -14,3 +14,10 @@ archives_base_name = banner
 
 # Dependencies
 fabric_version=0.106.0+1.21.2
+
+systemProp.http.proxyHost=127.0.0.1
+systemProp.http.proxyPort=7890
+systemProp.https.proxyHost=127.0.0.1
+systemProp.https.proxyPort=7890
+systemProp.socks.proxyHost=127.0.0.1
+systemProp.socks.proxyPort=7890
