--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,10 @@ allprojects {
             url = 'https://maven.mohistmc.com/'
         }
         maven {
+            name = 'mohist lib'
+            url = 'https://maven.mohistmc.com/libraries'
+        }
+        maven {
             name = 'izzel'
             url = 'https://maven.izzel.io/releases'
         }
@@ -161,6 +165,7 @@ dependencies {
     include(project("banner-server"))
     include(project("banner-plugin"))
     include(project("banner-bootstrap"))
+    include("net.minecraft:server:${project.minecraft_version}")
 }
 
 tasks.withType(JavaCompile).configureEach {
@@ -175,7 +180,7 @@ jar {
                 'Main-Class': 'com.mohistmc.banner.BannerLauncher',
                 'Specification-Title'   : 'Banner',
                 'Specification-Vendor'  : 'MohistMC',
-                'Specification-Version' : ci_version(),
+                'Specification-Version' : '1.21.2',
                 'Implementation-Title'  : 'Banner',
                 'Implementation-Version': version,
                 'Implementation-Vendor' : 'MohistMC'
