Remaining 78 errors, exclude mixin classes

--- a/banner-server/build.gradle
+++ b/banner-server/build.gradle
@@ -23,3 +23,9 @@ moduleDependencies(project, [
 		"banner-api",
 		"banner-transitive-access-wideners"
 ])
+
+// b=
+tasks.withType(JavaCompile).configureEach {
+	options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
+	exclude("com/mohistmc/banner/mixin/**")
+}
