--- a/modules/banner-server/build.gradle
+++ b/modules/banner-server/build.gradle
@@ -17,6 +17,7 @@ dependencies {
 	include(rootProject.project("banner-stackdeobf"))
 	include(rootProject.project("banner-bukkit-manager"))
 	include(rootProject.project("banner-compat"))
+	include("com.github.bawnorton.mixinsquared:mixinsquared-fabric:0.2.0")
 }
 
 moduleDependencies(project, [
